# airsstool

./: .gitignore  LICENSE  README.md  README_zh.md  SKILL.md  __init__.py  airsstool.py  airsstool_mcp.py  db_creation.py  process_rsshub_data.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
routes_data/: rsshub_routes_with_heat_badges.html
routes_heat_data/: rsshub-routes-heat.json
site-feeds/: SKILL.md
