[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airsstool"
version = "1.0.1"
description = "RSSHub CLI Tool & MCP Server for AI Agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "heqi201255", email = "heqi201255@icloud.com"}
]
maintainers = [
    {name = "heqi201255", email = "heqi201255@icloud.com"}
]
keywords = ["rsshub", "rss", "cli", "mcp", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "mcp",
]

[project.scripts]
airsstool = "airsstool:main"
airsstool-mcp = "airsstool:mcp_main"

[tool.setuptools]
packages = ["airsstool"]

[tool.setuptools.package-dir]
airsstool = "."

[tool.setuptools.package-data]
airsstool = ["routes_heat_data/rsshub-routes-heat.json"]